# resQapp

./: .gitignore
backend/: .env.example  alembic.ini  pyproject.toml  test_db.py  test_security.py
backend/alembic/: env.py
backend/alembic/versions/: 072c276c6ffa_add_ai_analysis_fields_to_incidents.py  46c20be4c301_create_incidents_table.py  9ad745e2a298_update_users_table.py  c776cae83936_create_users_table.py
backend/app/: main.py
backend/app/ai/: prompts.py  providers.py  schemas.py  service.py
backend/app/api/: ai.py  analytics.py  auth.py  incidents.py  users.py
backend/app/core/: config.py  dependencies.py  oauth2.py  permissions.py  security.py
backend/app/db/: session.py
backend/app/models/: enums.py  incident.py  user.py
backend/app/repositories/: analytics_repository.py  incident_repository.py  user_repository.py
backend/app/schemas/: analytics.py  incident.py  user.py
backend/app/services/: analytics_service.py  auth_service.py  incident_service.py
